<resources>
    <string name="app_name">GasosaManeira</string>
    <string name="gasLabel">Gas price per liter</string>
    <string name="alcoholLabel">Ethanol price per liter</string>
    <string name="bestChoiceLabel">Best choice:</string>
    <string name="gasPriceTextView">0.00</string>
    <string name="alcoholPriceTextView">0.00</string>

    <string name="bestChoiceGas">Gasoline</string>
    <string name="bestChoiceAlcohol">Ethanol</string>
</resources>
